# MeshFix-V1.5A

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_cygwin.txt  CMakeLists_linux.txt  cygwin.txt  meshfix  meshfix.cpp  readme.txt  superLU_CMakeLists_cygwin.txt
contrib/JMeshLib/: CMakeLists.txt  README.txt
contrib/JMeshLib/include/: dijkstraGraph.h  j_mesh.h  list.h  tin.h
contrib/JMeshLib/src/JMESH/: jmesh.cpp
contrib/JMeshLib/src/MESH_STRUCTURE/: checkAndRepair.cpp  io.cpp  point.cpp  tin.cpp  vertex.cpp
contrib/JMeshLib/src/PRIMITIVES/: dijkstraGraph.cpp  list.cpp
contrib/JMeshLib/vc8/: minJMeshLib.vcproj
contrib/OpenNL3.2.1/src/: nl_single_file.c
include/: exttrimesh.h
src/: cleaning.cpp  holeFilling.cpp  mwExtensions.cpp  simplification.cpp  smoothing.cpp
test/: close_objects.off  sphere1.off  sphere2.off  sphere3_dented.off  sphere_cut_inner_result.off  sphere_cut_inner_test.sh  sphere_cut_outer_result.off  sphere_cut_outer_test.sh  sphere_decouple_inin_result.off  sphere_decouple_inin_test.sh  sphere_decouple_outin_test.sh  sphere_decouple_outout_test.sh  sphere_join_test.sh
